--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,6 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -15,5 +14,7 @@
     "express": "^4.18.1",
     "nodemon": "^2.0.20",
     "socket.io": "^4.5.2"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
